--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,9 @@ dependencies {
     testImplementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testCompileOnly 'org.projectlombok:lombok:1.18.24'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
     testRuntimeOnly('org.slf4j:slf4j-simple:2.0.3')
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
 }
